fix spacing on contact page

--- a/public/assets/scss/elements/_contact.scss
+++ b/public/assets/scss/elements/_contact.scss
@@ -76,7 +76,7 @@
                 font-size: 16px;
             }
             @media #{$sm-layout} {
-                font-size: 16px;
+                font-size: 14px;
             }
             br {
                 
